# wgpu-hello-compute

./: Cargo.toml  build.rs
shaders/: clearGrid.wgsl  compute.wgsl  copyPosition.wgsl  g2p.wgsl  mls-mpm.ts  p2g_1.wgsl  p2g_2.wgsl  spawnParticles.wgsl  sphere.wgsl  types.wesl  updateGrid.wgsl
src/: clearGrid.rs  compute.rs  copyPosition.rs  g2p.rs  hello_triangle.rs  main.rs  p2g_1.rs  p2g_2.rs  render.rs  shader.rs  shader.wgsl  solver.rs  spawnParticles.rs  sphere.rs  updateGrid.rs
