[package]
name = "example"
version = "0.15.2"
edition = "2024"

publish = false

[dependencies]
winit = "0.30"
wgpu = "26.0"
futures = "0.3"
encase = { version = "0.11.2", features = ["glam"] }
glam = { version = "0.30" }
env_logger = "0.11"
pollster = "0.4.0"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "sync"] }

[build-dependencies]
wesl = "0.2.0"
wgsl_to_wgpu = "0.15.2"
